# GFS

./: .gitignore  .gitmodules  CMakeLists.txt  Git-from-Scratch.sln  Instructions.txt  README.md  Unix.sh  Windows.bat
Git-from-Scratch/: Git-from-Scratch.vcxproj  Git-from-Scratch.vcxproj.filters
Git-from-Scratch/include/: CatCommands.hpp  Client.hpp  HashObject.hpp  LSTree.hpp  commanInclude.hpp
Git-from-Scratch/include/BaseFiles/: Compression.hpp  FileReader.hpp  commanInclude.hpp
Git-from-Scratch/src/: App.cpp
Git-from-Scratch/x64/Debug/: Git-from-Scratch.dll.recipe  Git-from-Scratch.exe.recipe  Git-from-Scratch.ilk  Git-from-Scratch.vcxproj.FileListAbsolute.txt  vc143.idb
Git-from-Scratch/x64/Debug/Git-from-Scratch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Git-from-Scratch.lastbuildstate  Git-from-Scratch.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Git-from-Scratch/x64/Release/: Git-from-Scratch.exe.recipe  Git-from-Scratch.iobj  Git-from-Scratch.ipdb  Git-from-Scratch.vcxproj.FileListAbsolute.txt
Git-from-Scratch/x64/Release/Git-from-Scratch.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Git-from-Scratch.lastbuildstate  Git-from-Scratch.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
